--- a/style.css
+++ b/style.css
@@ -20,6 +20,21 @@ hr {
 	max-width: 65px;
 	opacity: 1;  
 }
+.container-2 {
+	background-color: black;
+	display: flex;
+	justify-content: center;
+}
+
+
+.container-2 > div {
+	background-color: white;
+	width: 150px;
+	margin: 10px;
+	padding: 20px;
+	border-radius: 10px;
+	text-align: center;
+}
 .buffer {
 	height: 20rem;
 }
